Fixed alignments in personal profiles

--- a/css.css
+++ b/css.css
@@ -151,7 +151,6 @@ height: 100%;
 
 
 .section picture {
-margin-top: 50px;
 margin-left: -50px;
 position:absolute;
 z-index:0;
@@ -170,7 +169,7 @@ margin-left:13.5vw;
 
 .mask article button {
 color: #FFF;
-opacity: 0;
+opacity: 0.5;
 cursor: pointer;
 margin-left: 1.4vw;
 width: 14.2vw;
@@ -180,23 +179,23 @@ height: 20vw;
 
 #contact-info {
 color: #000;
-opacity: 0;
+opacity: 0.5;
 cursor: pointer;
 margin-left: 25vw;
 width: 13vw;
 height: 4vw;
-margin-top: 9vw;
+margin-top: 5vw;
 }
 
 
 #join-us {
 color: #000;
-opacity: 0;
+opacity: 0.5;
 cursor: pointer;
 margin-left: 28.5vw;
 width: 10vw;
 height: 4vw;
-margin-top: 32vw;
+margin-top: 28vw;
 }
 
 
@@ -214,7 +213,7 @@ padding-bottom: 3vw;
 
 #contact-us article {
 float: left;
-    margin-top: 12.8vw;
+margin-top: 12.8vw;
 }
 
 #contact-us picture {
@@ -282,7 +281,7 @@ cursor: url('img/closeCursor.svg') 22 45, default;
 #jan-profile,
 #jerry-profile,
 #keith-profile {
-overflow: hidden;
+/*overflow: hidden;*/
 }
 
 
@@ -320,34 +319,51 @@ cursor: pointer;
 #jerry-profile article,
 #keith-profile article {
 margin-top: 25vh;
-margin-left: 25vw;
-max-width: 44vw;
+margin-left: 22vw;
+max-width: 60vw;
+
+/*border:10px solid blue;*/
+height: 50vh;
+width: 100vw;
+
 }
 
 
-#paul-profile picture,
-#jan-profile picture,
-#jerry-profile picture,
-#keith-profile picture {
-left: 0;
-margin-left: 18vw;
-padding-right: 10vw;
+#paul-profile img,
+#jan-profile img,
+#jerry-profile img,
+#keith-profile img {
+/*left: 0;*/
+margin-left: 4vw;
+/*padding-right: 10vw;*/
+float: left;
+/*border:10px solid red;*/
+margin-top:0;
 }
 
 
 #profile-bio {
-padding-left: 18vw;
-width: 40vw;
-float:left;
+width: 32vw;
+float:right;
 }
+
+
+#profile-information {
+float:left;
+width: 100%;
+height: 100%;
+/*border:10px solid green;*/
+}
+
 
 
 #contact-information {
-position:absolute;
-vertical-align: bottom;
-margin-top: 30vw;
-margin-left: -6.5vw;
+  margin-top:35vw;
+  margin-left: 4.5vw;
+/*border:10px solid yellow;*/
 }
+
+
 
 #contact-us article header,
 #paul-profile article header,
@@ -374,11 +390,11 @@ line-height: 1.55vw;
 
 
 #profile-bio p {
-margin-top: 1vw;
+margin-top: 0.5vw;
 font-family: AvenirLTStd-Book, Helvetica Neue, sans-serif;
 font-size: 1.3vw;
 line-height: 1.85vw;
-line-height: 2.25vh;
+line-height: 2.45vh;
 letter-spacing: 0.01vw;
 
 
